# hacker-league-jan23

./: .dockerignore  Dockerfile  Procfile  fly.toml  index.html
calculator/: Dockerfile  fly.toml  pyproject.toml  render.yaml
calculator/src/calculator/: main.py
calculator/src/calculator/api/: app.py
calculator/src/calculator/templates/: calculator.html
src/baby_noise_recorder/: Dockerfile  fly.toml  main.py  requirements.txt
src/baby_noise_recorder/action/: api.py
src/baby_noise_recorder/context/: config.py
src/baby_noise_recorder/process/: recording_manager.py
src/baby_noise_recorder/resource/: audio_device.py  storage.py
src/baby_noise_recorder/state/: models.py
src/baby_noise_recorder/templates/: index.html
src/hello_world/: app.py
src/hello_world/templates/: index.html
src/sparc_demo/: main.py
src/sparc_demo/action/: api.py
src/sparc_demo/context/: config.py
src/sparc_demo/process/: todo_manager.py
src/sparc_demo/resource/: storage.py
src/sparc_demo/state/: models.py
